# poetry-lambda-container-boiler-plate

./: .gitignore  Dockerfile  Makefile  README.md  README.pt.md  pyproject.toml
app/: main.py
terraform/: example.tfvars  main.tf  variables.tf
