[tool.poetry]
name = "fastapi-lambda"
version = "0.1.0"
description = "FastAPI application running on AWS Lambda"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
mangum = "^0.17.0"
uvicorn = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 